@@ -1,28 +1,0 @@
-def opengl_bindings_gem_available?
-  Gem::Specification.find_by_name('opengl-bindings')
-rescue Gem::LoadError
-  false
-rescue
-  Gem.available?('opengl-bindings')
-end
-
-if opengl_bindings_gem_available?
-  # puts("Loading from Gem system path.")
-  require 'opengl'
-else
-  # puts("Loaging from local path.")
-  require '../../lib/opengl'
-end
-
-include OpenGL
-
-case OpenGL.get_platform
-when :OPENGL_PLATFORM_WINDOWS
-  OpenGL.load_lib('opengl32.dll', 'C:/Windows/System32')
-when :OPENGL_PLATFORM_MACOSX
-  OpenGL.load_lib('libGL.dylib', '/System/Library/Frameworks/OpenGL.framework/Libraries')
-when :OPENGL_PLATFORM_LINUX
-  OpenGL.load_lib('libGL.so', '/usr/lib/x86_64-linux-gnu')
-else
-  raise RuntimeError, "Unsupported platform."
-end
